[metadata]
name = applyprofile
# version = see setup.py
author = Jesra Tikalsky
author_email = jtikalsky@hep.wisc.edu
keywords = automation
# license = See Github
url = https://github.com/uwcms/APx-applyprofile
description = A tool for downloading, verifying and excuting manifests with puppet-apply.
long_description = A tool for downloading, verifying and excuting manifests with puppet-apply.

[options]
scripts = applyprofile
